# ollama-discord

./: .coverage  .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  DUPLICATE_RESPONSE_INVESTIGATION.md  INVESTIGATION.md  PLAN.md  README.md  STARTUP_VALIDATION_PLAN.md  STORAGE_MIGRATION_PLAN.md  coverage.xml  main.py  ollama-discord-dev.service  ollama-discord.service  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
config/: bot1.yaml  example.yaml  logic.yaml  multi_bot.yaml  multi_bot_example.yaml  sage.yaml  spark.yaml  test.yaml
docs/: DEBUG_COMMANDS.md  DISCORD_APPLICATION_SETUP.md  LOGGING_CONFIGURATION.md  MULTI_TOKEN_SETUP.md  PR_WORKFLOW.md
scripts/: install-service.sh  migrate_to_sqlite.py  setup_branch_protection.py  tail-logs.sh  test_live_message_processing.py
src/: __init__.py  adapters.py  bot.py  bot_manager.py  config.py  conversation_state.py  debug_commands.py  debug_utils.py  domain_services.py  message_processor.py  multi_bot_config.py  ports.py  service_factory.py  sqlite_storage.py
tests/: test_adapters.py  test_bot.py  test_bot_manager.py  test_config.py  test_configuration_integration.py  test_context_isolation_integration.py  test_context_leakage_prevention.py  test_conversation_isolation.py  test_conversation_state.py  test_domain_services.py  test_imports.py  test_integration.py  test_integration_message_flow.py  test_integration_ports_adapters.py  test_message_processing_integration.py  test_message_processor.py  test_multi_bot_config.py  test_service_lifecycle.py  test_sqlite_storage.py
(+2 files in other folders)
